# cmake_lib_example

./: .gitignore  CMakeLists.txt  Config.cmake.in  ExampleLib.sublime-project  readme.md
MyLib/: CMakeLists.txt  MyLibPrivate.h  MyLibPublic.h
MyLib/details/: CMakeLists.txt  DetailsPrivate.h  DetailsPublic.cpp  DetailsPublic.h
client/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  MyLibTest.cpp  TestMain.cpp
tests/: readme.dm  tests.sh
